--- a/src/components/letterBox/letterBox.css
+++ b/src/components/letterBox/letterBox.css
@@ -9,14 +9,41 @@
   align-items: center;
   margin: 0.2rem;
   text-transform: uppercase;
+  transition: transform 0.3s ease;
+  background-color: white;
+  color: black;
 }
 
+/* Estado final después de la animación */
 .letter-box.correct {
-  background-color: #6aaa64; /* verde */
+  background-color: #6aaa64;
+  color: white;
 }
 .letter-box.elsewhere {
-  background-color: #c9b458; /* amarillo */
+  background-color: #c9b458;
+  color: white;
 }
 .letter-box.absent {
-  background-color: #787c7e; /* gris */
+  background-color: #787c7e;
+  color: white;
+}
+
+/* Animación */
+.letter-box.flip {
+  animation: flipIn 0.3s ease forwards;
+  background-color: white;
+  color: black;
+}
+
+@keyframes flipIn {
+  0% {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(90deg);
+    background-color: white;
+  }
+  100% {
+    transform: rotateX(0deg);
+  }
 }
